add numpy import

--- a/movies_analysis_2.ipynb
+++ b/movies_analysis_2.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 1,
    "id": "eb2c3d49",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "df_movies = pd.read_csv('tmdb_movies.csv')\n",
     "df_genres = pd.read_csv('tmdb_genres.csv')"
@@ -15,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 2,
    "id": "cee81d8c",
    "metadata": {},
    "outputs": [
@@ -215,7 +216,7 @@
        "4      28.0  "
       ]
      },
-     "execution_count": 240,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 3,
    "id": "c95176fc",
    "metadata": {},
    "outputs": [
@@ -294,7 +295,7 @@
        "4       878.0  Science Fiction"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 4,
    "id": "ded75287",
    "metadata": {},
    "outputs": [
@@ -373,7 +374,7 @@
        "4     878.0  Science Fiction"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 5,
    "id": "f63cf259",
    "metadata": {},
    "outputs": [],
@@ -403,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 6,
    "id": "55a2d81f",
    "metadata": {},
    "outputs": [
@@ -501,7 +502,7 @@
        "9                GoodFellas           8.2"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 7,
    "id": "06cc13bf",
    "metadata": {},
    "outputs": [
@@ -612,7 +613,7 @@
        "6             2016  139049586  45703269"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 8,
    "id": "4bdaf989",
    "metadata": {},
    "outputs": [
@@ -683,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 9,
    "id": "c11614be",
    "metadata": {},
    "outputs": [
@@ -889,7 +890,7 @@
        "4      28.0     Action  "
       ]
      },
-     "execution_count": 247,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 10,
    "id": "1c19544e",
    "metadata": {},
    "outputs": [
@@ -939,7 +940,7 @@
        "Name: genres, dtype: int64"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 11,
    "id": "d045ca84",
    "metadata": {},
    "outputs": [
@@ -1100,7 +1101,7 @@
        "Foreign           83.000000"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 12,
    "id": "822b327e",
    "metadata": {},
    "outputs": [
